--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
 
 .choice-button {
     background-color: white;
-    color: black;
-    width: 90px;
-    height: 40px;
-    border: 2px solid aquamarine;
+    color: #000000;
+    width: 160px;
+    height: 60px;
+    border: 6px solid aquamarine;
     border-radius: 12px;
     margin-left: 10px;
     margin-right: 10px;
@@ -21,6 +21,11 @@
 }
 
 .choices {
+    display: flex;
+    justify-content: center;
+}
+
+.game-space {
     display: flex;
     justify-content: center;
 }
