Implemented functional scoreboard that displays in HTML. Project is 100% functional.

--- a/style.css
+++ b/style.css
@@ -29,3 +29,18 @@
     display: flex;
     justify-content: center;
 }
+
+.game-text {
+    display: flex;
+    justify-content: center;
+}
+
+.text {
+    display: flex;
+    justify-content: center;
+}
+
+.score-box {
+    display: flex;
+    justify-content: center;
+}
